@@ -1,3 +1,9 @@
+2004-04-13  Erik Grinaker  <erikg@wired-networks.net>
+
+	* pygtk-gdkwindow.xml (raise): Changed name of raise() to
+	raise_(), and added a note to explain this is because
+	raise is a reserved Python keyword.
+
 2004-01-28  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtktogglebutton.xml (get_mode)
